# AI-TDP

./: .gitignore  README.md  chip_thermal_pinn.py  pyproject.toml  transformer.ipynb
