[project]
name = "tdp"
version = "0.1.0"
description = "AI for prediction and visualization on thermal distribution of chips"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deepxde>=1.15.0",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "scipy>=1.17.1",
    "torch>=2.11.0",
]
